created get purchase endpoint and tests
