# src/main/java/com/felpeto/purchase/controller/dto/response/PurchaseResponseDto.java
@@ -1,7 +1,11 @@
 package com.felpeto.purchase.controller.dto.response;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonInclude.Include;
+import com.fasterxml.jackson.databind.annotation.JsonSerialize;
+import com.felpeto.purchase.controller.configuration.BigDecimalSerializer;
 import java.math.BigDecimal;
-import java.time.LocalDateTime;
+import java.time.LocalDate;
 import java.util.UUID;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -16,10 +20,17 @@ import lombok.ToString;
 @EqualsAndHashCode
 @NoArgsConstructor
 @AllArgsConstructor
+@JsonInclude(Include.NON_NULL)
 public class PurchaseResponseDto {
 
   private UUID id;
   private String description;
-  private LocalDateTime transactionDate;
+  private LocalDate transactionDate;
+  private BigDecimal exchangeRate;
+
+  @JsonSerialize(using = BigDecimalSerializer.class)
   private BigDecimal amount;
+
+  @JsonSerialize(using = BigDecimalSerializer.class)
+  private BigDecimal convertedMoney;
 }
